--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -46,9 +46,8 @@ jobs:
       - name: Compile that source code like a bandit
         run: |
           javac -d bin -cp "src/test:src/main:lib/*" src/test/*.java src/main/*.java 2> results/compilation-results.txt
-          cat results/compilation-results.txt
 
-      - name: Run the PMD, posthaste
+      - name: Generate PMD report
         if: ${{ always() }}
         run: |
           wget "https://github.com/pmd/pmd/releases/download/pmd_releases%2F6.26.0/pmd-bin-6.26.0.zip" -P /tmp
@@ -56,38 +55,48 @@ jobs:
           mv /tmp/pmd-bin-6.26.0 $HOME/pmd
           chmod +x $HOME/pmd/bin/run.sh
           $HOME/pmd/bin/run.sh pmd -d ./src/main -R config/pmd/comp1501-pmd-rules.xml -f xml -r results/pmd-results.xml
-          $HOME/pmd/bin/run.sh pmd -d ./src/main -R config/pmd/comp1501-pmd-rules.xml -f textcolor
 
-      - name: Check all the styles
+      - name: Generate human-readable PMD report
+        if: ${{ always() }}
+        run: |
+          $HOME/pmd/bin/run.sh pmd -d ./src/main -R config/pmd/comp1501-pmd-rules.xml -f text 1> results/pretty-pmd-results.txt
+
+      - name: Generate Checkstyle report
         if: ${{ always() }}
         run: |
           wget "https://github.com/checkstyle/checkstyle/releases/download/checkstyle-8.34/checkstyle-8.34-all.jar" -P /tmp
-          java -Dconfig_loc="config/checkstyle" -jar /tmp/checkstyle-8.34-all.jar -c config/checkstyle/1501-checks.xml src/main/*.java
           java -Dconfig_loc="config/checkstyle" -jar /tmp/checkstyle-8.34-all.jar -c config/checkstyle/1501-checks.xml src/main/*.java -f xml -o results/checkstyle-results.xml
 
-      - name: Testing the heck outta the codes
+      - name: Generate human-readable Checkstyle report
+        if: ${{ always() }}
+        run: |
+          java -Dconfig_loc="config/checkstyle" -jar /tmp/checkstyle-8.34-all.jar -c config/checkstyle/1501-checks.xml src/main/*.java 1> results/pretty-checkstyle-report.txt
+
+      - name: Generate test report
         if: ${{ always() }}
         run: |
           wget "https://repo1.maven.org/maven2/org/junit/platform/junit-platform-console-standalone/1.6.2/junit-platform-console-standalone-1.6.2.jar" -P /tmp
           java -jar /tmp/junit-platform-console-standalone-1.6.2.jar --class-path "bin:lib/assertj-core-3.16.1.jar:lib/system-lambda-1.0.0.jar" --disable-banner --scan-class-path --reports-dir=results
 
-      - name: Save text run of test
+      - name: Generate human-readable test report
         if: ${{ always() }}
         run: |
           java -jar /tmp/junit-platform-console-standalone-1.6.2.jar --class-path "bin:lib/assertj-core-3.16.1.jar:lib/system-lambda-1.0.0.jar" --disable-banner --disable-ansi-colors --scan-class-path --details=tree 1> results/pretty-test-results.txt
-          ls -al ./results
 
-      - name: Figuring out what this all meant
+      - name: Alter default junit reports
         if: ${{ always() }}
         run: |
           ls -al ./results
           mv ./results/TEST-junit-jupiter.xml ./results/junit-results.xml
           rm -f ./results/TEST-junit-vintage.xml
           ls -al ./results
-          java -jar ./cisummarizer-all.jar $GITHUB_REPOSITORY
-          cat reports/summary-report.txt
 
-      - name: Save the results, just because
+      - name: Generate summary report
+        if: ${{ always() }}
+        run: |
+          java -jar ./cisummarizer-all.jar $GITHUB_REPOSITORY
+
+      - name: Save the results as an artifact
         if: ${{ always() }}
         uses: actions/upload-artifact@v2
         with:
@@ -96,10 +105,10 @@ jobs:
             reports/
             results/
 
-      - name: Create an issue from the result. Despair? Jubilation?
+      - name: Create an issue from the result
         if: ${{ always() }}
-        uses: peter-evans/create-issue-from-file@v2
+        uses: peter-evans/create-issue-from-file@v2.3.1
         with:
-          title: A summary was created
+          title: A summary report of your submission was created
           content-filepath: ./reports/summary-report.txt
           labels: report
