--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -1,3 +1,6 @@
+# discussion of this file and its contents can be found at
+# https://github.com/jpratt-mru/adventures-in-autograding/blob/master/talking-about-workflow.md#github-workflow-example
+
 name: Submit this assessment.
 
 on:
