--- a/.classpath
+++ b/.classpath
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/main">
+	<classpathentry kind="src" path="src">
 		<attributes>
 			<attribute name="ignore_optional_problems" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src/test">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
-			<attribute name="ignore_optional_problems" value="true"/>
+			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER" />
-	<classpathentry kind="lib" path="lib/assertj-core-3.13.2.jar"/>
+	<classpathentry kind="lib" path="lib/assertj-core-3.17.2.jar"/>
+	<classpathentry kind="lib" path="lib/system-lambda-1.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/junit-jupiter-params-5.7.0.jar"/>
+	<classpathentry kind="lib" path="lib/junit-platform-console-standalone-1.7.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
