--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PROJECT-NAME-HERE</name>
+	<name>sassy-start</name>
 	<comment></comment>
 	<projects>
 	</projects>
