--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -39,8 +39,8 @@ jobs:
           rm -rf ./lib
           rm -rf ./config
           rm -rf ./src/test
-          wget "REPLACE-ZIP-LOCATION" -O /tmp/ZIP-NAME.zip
-          unzip /tmp/ZIP-NAME.zip -d /tmp/defaults
+          wget "REPLACE-ZIP-LOCATION" -O /tmp/REPLACE-ZIP-NAME.zip
+          unzip /tmp/REPLACE-ZIP-NAME.zip -d /tmp/defaults
           mv /tmp/defaults/src/test ./src/test
           mv /tmp/defaults/config ./config
           mv /tmp/defaults/lib ./lib
