Make sure junit5 standalone is in lib.
If the standalone jar isn't in lib, compilation won't work. Have to make sure it's there, as it shouldn't be coming in via the zip file.

--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -44,6 +44,7 @@ jobs:
           mv /tmp/defaults/src/test ./src/test
           mv /tmp/defaults/config ./config
           mv /tmp/defaults/lib ./lib
+          wget "https://repo1.maven.org/maven2/org/junit/platform/junit-platform-console-standalone/1.7.0/junit-platform-console-standalone-1.7.0.jar" -O ./lib/junit-platform-console-standalone-1.7.0.jar
           cp /tmp/defaults/cisummarizer-all.jar ./
           mkdir results
           mkdir reports
