--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -14,6 +14,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     continue-on-error: true
+    env:
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 
     steps:
       - name: Checkout thy repository
